# TSAI_EAG_v2_embeddings_FAISS_S7

./: .gitignore  README.md  README_SEARCH_AGENT.md  action.py  agent.py  app.py  decision.py  main.py  memory.py  perception.py  pyproject.toml  search_agent.py  server_v2.py  server_v3.py  test_ddg.py
documents/: downloaded_1763553846.txt  downloaded_1763553849.txt  downloaded_1763553852.txt  downloaded_1763553885.txt  downloaded_1763553891.txt  downloaded_1763553938.txt  downloaded_1763553939.txt  downloaded_1763553940.txt  downloaded_1763554644.txt  downloaded_1763554647.txt  downloaded_1763605374.txt  downloaded_1763607480.txt  downloaded_1763607482.txt
faiss_index/: doc_index_cache.json  metadata.json
static/: index.html  script.js  style.css
